Fixed text fade in announcements
Upon zoom in, the text fade would cover the title as well because the
title was included in the grid system used to calculate where the fade
should be, so the title was taken out of the grid with some spacing
adjusted to make sure that the fade will only ever cover the content of
the announcement, and never the title.

--- a/style.css
+++ b/style.css
@@ -251,9 +251,16 @@ body {
 
 .announcement {
     /* border: 2px solid pink; */
-    padding: 1em;
-    min-height: 60px;
+    /* min-height: 60px; */
+    display: flex;
+    flex-direction: column;
+}
+
+.announcement-grid {
+    /* border: 2px solid blue; */
+    /* min-height: 20px; */
     position: relative;
+    flex: 1;
     display: grid;
     grid-template-rows: repeat(auto-fill, 20px);
 }
@@ -265,8 +272,7 @@ body {
 }
 
 .announcement-text {
-    /* min-height: 60px; */
-    grid-row-start: 2;
+    grid-row-start: 1;
     grid-row-end: -1;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -280,7 +286,6 @@ body {
     height: 20px;
     background: rgb(5, 5, 5);
     background: linear-gradient(90deg, rgba(5, 5, 5, 0.09007352941176472) 0%, rgba(5, 5, 5, 0.2721463585434174) 20%, rgba(5, 5, 5, 0.5130427170868348) 39%, rgba(5, 5, 5, 0.8127626050420168) 65%, rgba(5, 5, 5, 0.9304096638655462) 80%, rgba(5, 5, 5, 1) 100%);
-    right: 10px;
     width: 100%;
     /* border: 1px solid pink; */
 }
@@ -288,6 +293,7 @@ body {
 .divider {
     /* border: 10px solid purple; */
     height: 1px;
+    margin: 1em;
     background: rgb(255, 96, 0);
     background: linear-gradient(270deg, rgba(255, 96, 0, 1) 0%, rgba(28, 28, 28, 1) 100%);
 }
